Update project files and add database migration

--- a/env.production.example
+++ b/env.production.example
@@ -16,6 +16,7 @@ JWT_SECRET=your_very_strong_jwt_secret_key_here
 
 # Stripe Configuration
 STRIPE_SECRET_KEY=sk_live_your_stripe_secret_key
+STRIPE_PUBLISHABLE_KEY=pk_live_your_stripe_publishable_key
 
 # Optional: Stripe Webhook Secret (if using webhooks)
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
