--- a/render.yaml
+++ b/render.yaml
@@ -18,3 +18,5 @@ services:
         sync: false
       - key: STRIPE_SECRET_KEY
         sync: false
+      - key: STRIPE_PUBLISHABLE_KEY
+        sync: false
