--- a/env.example
+++ b/env.example
@@ -6,6 +6,10 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 # JWT Secret
 JWT_SECRET=your_jwt_secret_key
 
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+
 # Server Configuration
 PORT=3000
 NODE_ENV=development
